fix: Register exportAllRoleRules command
- Added exportAllRoleRules to package.json commands
- Added exportAllRoleRules to CommandId type in types/vscode.ts
- Fixed command name from roo-code to ai-ide-bas prefix
- Command should now be properly registered in VSCode

--- a/ai_ide_bas_main/src/package.json
+++ b/ai_ide_bas_main/src/package.json
@@ -99,6 +99,12 @@
 				"icon": "$(cloud-download)"
 			},
 			{
+				"command": "ai-ide-bas.exportAllRoleRules",
+				"title": "Экспортировать все правила ролей в .roo",
+				"category": "%configuration.title%",
+				"icon": "$(cloud-download)"
+			},
+			{
 				"command": "ai-ide-bas.plusButtonClicked",
 				"title": "%command.newTask.title%",
 				"icon": "$(add)"
