--- a/ai_ide_bas_main/src/package.json
+++ b/ai_ide_bas_main/src/package.json
@@ -3,7 +3,7 @@
 	"displayName": "AI IDE BAS",
 	"description": "IDE for analysts and architects",
 	"publisher": "8eton",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"icon": "assets/icons/bas-logo.png",
 	"aiKey": "InstrumentationKey=e8a16c83-dab4-48d4-bf92-408c9e579a85",
 	"galleryBanner": {
@@ -87,6 +87,11 @@
 			]
 		},
 		"commands": [
+			{
+				"command": "ai-ide-bas.showWelcome",
+				"title": "Показать приветственную страницу",
+				"icon": "$(home)"
+			},
 			{
 				"command": "ai-ide-bas.exportMarkdownToPdf",
 				"title": "Export Markdown to PDF (with watermark)",
