feat: Add direct command to open AI IDE BAS
- Added 'ai-ide-bas.openAIIDE' command to package.json
- Added command to Command Palette menu
- Implemented registerCommands function with webview panel
- Created getWebviewContent function to load our React app
- Now users can open AI IDE BAS via Command Palette (Cmd+Shift+P)

Usage: Cmd+Shift+P → 'AI IDE BAS: Открыть AI IDE BAS'

--- a/ai_ide_bas_main/src/package.json
+++ b/ai_ide_bas_main/src/package.json
@@ -93,6 +93,11 @@
 				"icon": "$(home)"
 			},
 			{
+				"command": "ai-ide-bas.openAIIDE",
+				"title": "Открыть AI IDE BAS",
+				"icon": "$(robot)"
+			},
+			{
 				"command": "ai-ide-bas.exportMarkdownToPdf",
 				"title": "Export Markdown to PDF (with watermark)",
 				"category": "Markdown"
@@ -221,6 +226,12 @@
 			}
 		],
 		"menus": {
+			"commandPalette": [
+				{
+					"command": "ai-ide-bas.openAIIDE",
+					"title": "AI IDE BAS: Открыть AI IDE BAS"
+				}
+			],
 			"editor/context": [
 				{
 					"submenu": "ai-ide-bas.contextMenu",
