Update AI IDE BAS project with new features and improvements

--- a/ai_ide_bas_main/package.json
+++ b/ai_ide_bas_main/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.1",
 	"packageManager": "pnpm@10.8.1",
 	"engines": {
+		"vscode": "^1.84.0",
 		"node": "20.19.2"
 	},
 	"extensionPack": [
