--- a/ai_ide_bas_main/src/package.json
+++ b/ai_ide_bas_main/src/package.json
@@ -93,11 +93,6 @@
 				"icon": "$(home)"
 			},
 			{
-				"command": "ai-ide-bas.openAIIDE",
-				"title": "Открыть AI IDE BAS",
-				"icon": "$(robot)"
-			},
-			{
 				"command": "ai-ide-bas.exportMarkdownToPdf",
 				"title": "Export Markdown to PDF (with watermark)",
 				"category": "Markdown"
@@ -120,7 +115,7 @@
 				"icon": "$(add)"
 			},
 			{
-				"command": "ai-ide-baspromptsButtonClicked",
+				"command": "ai-ide-bas.promptsButtonClicked",
 				"title": "%command.prompts.title%",
 				"icon": "$(organization)"
 			},
@@ -128,6 +123,11 @@
 				"command": "ai-ide-bas.filesButtonClicked",
 				"title": "Работа с файлами",
 				"icon": "$(files)"
+			},
+			{
+				"command": "ai-ide-bas.aiideButtonClicked",
+				"title": "AI IDE BAS",
+				"icon": "$(robot)"
 			},
 			{
 				"command": "ai-ide-bas.mcpButtonClicked",
@@ -227,10 +227,6 @@
 		],
 		"menus": {
 			"commandPalette": [
-				{
-					"command": "ai-ide-bas.openAIIDE",
-					"title": "AI IDE BAS: Открыть AI IDE BAS"
-				}
 			],
 			"editor/context": [
 				{
@@ -305,6 +301,11 @@
 					"when": "view == ai-ide-bas.SidebarProvider"
 				},
 				{
+					"command": "ai-ide-bas.aiideButtonClicked",
+					"group": "navigation@3.7",
+					"when": "view == ai-ide-bas.SidebarProvider"
+				},
+				{
 					"command": "ai-ide-bas.accountButtonClicked",
 					"group": "navigation@4",
 					"when": "view == ai-ide-bas.SidebarProvider"
@@ -349,6 +350,11 @@
 				{
 					"command": "ai-ide-bas.filesButtonClicked",
 					"group": "navigation@3.5",
+					"when": "activeWebviewPanelId == ai-ide-bas.TabPanelProvider"
+				},
+				{
+					"command": "ai-ide-bas.aiideButtonClicked",
+					"group": "navigation@3.7",
 					"when": "activeWebviewPanelId == ai-ide-bas.TabPanelProvider"
 				},
 				{
